# Entain

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  README.md  pyproject.toml
docs/: architecture-diagram.mmd  design-note.md
outputs/features/: customer_features.csv  feature_build_report.json
outputs/validation/: invalid_bets.csv  validation_report.json
src/bet_pipeline/: __init__.py  build_features.py  cli.py  validate.py
src/entain_bet_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: README.md  test_build_features.py  test_cli.py  test_validate.py
