[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entain-bet-pipeline"
version = "0.1.0"
description = "Scaffold for the Entain Australia junior MLE take-home assignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bet-pipeline = "bet_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
