[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entain-bet-pipeline"
version = "0.1.0"
description = "Local batch pipeline for validating bets and building customer features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bet-pipeline = "bet_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
